--- a/ekalappai/ekalappai.qrc
+++ b/ekalappai/ekalappai.qrc
@@ -1,8 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>images/intro.png</file>
-        <file>images/logo_24.png</file>
-        <file>images/logo.png</file>
-        <file>images/nokey.png</file>
+        <file>images/ekalappai_icons_anjal.png</file>
+        <file>images/ekalappai_icons_en.png</file>
+        <file>images/ekalappai_icons_tn99.png</file>
     </qresource>
 </RCC>
