Added external keyboard file support

--- a/ekalappai/ekalappai.qrc
+++ b/ekalappai/ekalappai.qrc
@@ -4,5 +4,7 @@
         <file>images/ekalappai_icons_anjal.png</file>
         <file>images/ekalappai_icons_en.png</file>
         <file>images/ekalappai_icons_tn99.png</file>
+        <file>images/ekalappai_icons_tw.png</file>
+        <file>images/ekalappai_icons_bamini.png</file>
     </qresource>
 </RCC>
