Added Bamini keyboard support

--- a/ekalappai/ekalappai.qrc
+++ b/ekalappai/ekalappai.qrc
@@ -6,5 +6,6 @@
         <file>images/ekalappai_icons_tn99.png</file>
         <file>images/ekalappai_icons_tw.png</file>
         <file>images/ekalappai_icons_inscript.png</file>
+        <file>images/ekalappai_icons_bamini.png</file>
     </qresource>
 </RCC>
